# AyCmakeTemplate-Tiny

./: .gitignore  CMakeLists.txt  README.md  README_CN.md  build.sh
cmake/: Init.cmake  Options.cmake  Utils.cmake
include/aytiny/: ay_add.h
main/: CMakeLists.txt  main.cc
src/: ay_add.cc
